--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,13 +1,13 @@
-<div class="container">
+<!-- <div class="container">
     <form [formGroup]="regform">
         <div class="row">
-            <div class="col">
+            <div class="col-6 m-auto">
                 <label class="form-label">First Name</label>
                 <input type="text" class=form-control placeholder="enter f name" formControlName="firstname">
                 <label class="form-label">last name</label>
                 <input type="text" class=form-control placeholder="enter lname" formControlName="lastname">
                 <label class="form-label">Mobile number</label>
-                <input type="number" class=form-control placeholder="enter description" formControlName="mobilenumber">
+                <input type="number" class=form-control placeholder="enter number" formControlName="mobilenumber">
                 <label class="form-label">dob</label>
                 <input type="date" class=form-control placeholder="enter dob" formControlName="dob">
                 <label class="form-label">email</label>
@@ -22,4 +22,4 @@
         </div>
 
     </form>
-</div>
+</div> -->
