--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,46 +1,92 @@
 <div class="container">
-    <form [formGroup]="vegitables">
-        <div class="row">
+  <form [formGroup]="vegitables">
+    <div class="row">
+      <h1 class="text-center bg-primary">VegitableList</h1>
+      <div class="col-6 m-auto">
+        <label class="form-label">productname</label>
+        <input type="text" class="form-control" place holder="enter item name" formControlName="productname">
+        <label class="form-label">quantity</label>
+        <input type="text" class="form-control" place holder="quantity" formControlName="quantity">
+        <label class="form-label">Price</label>
+        <input type="number" class="form-control" place holder="Price" formControlName="price">
+        <label class="form-label">description</label>
+        <input type="text" class="form-control" place holder="description" formControlName="description">
+
+      </div>
+      <div class=" text-center">
+        <button class="btn btn-success" type="submit" (click)="Add()">Add</button>
+      </div>
+    </div>
+  </form>
+  <table class=" table  table-striped table-bordered ">
+    <thead>
+      <tr>
+
+        <th>productname</th>
+        <th>quantity</th>
+        <th>price</th>
+        <th>description</th>
+        <th>Action</th>
+
+      </tr>
+
+    </thead>
+    <tbody>
+      <tr *ngFor="let p of veg">
+        <td>{{p.productname}}</td>
+        <td>{{p.quantity}}</td>
+        <td>{{p.price}}</td>
+        <td>{{p.description}}</td>
+        <td>
+          <div class="text-primary text-center">
+           <a><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#myModal" (click)="editVeg(p)"></i></a> 
+          
+           <a><i class="bi bi-trash" (click)="deleteVeg(p)"></i></a>
+          </div>
+
+          
+        </td>
+
+      </tr>
+    </tbody>
+  </table>
+  <div class="modal" id="myModal">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <!-- Modal Header -->
+        <!-- <div class="modal-header">
+                      <h4 class="modal-title m-auto ">Edit details</h4>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                  </div> -->
+
+        <!-- Modal body -->
+        <form [formGroup]="editVegForm">
+          <div class="row">
             <h1 class="text-center">VegitableList</h1>
             <div class="col-6 m-auto">
-                <label class="form-label">productname</label>
-                <input type="text"class="form-control"place holder="enter item name"formControlName="productname">
-                <label class="form-label">quantity</label>
-                <input type="text"class="form-control"place holder="quantity"formControlName="quantity">
-                <label class="form-label">Price</label>
-                <input type="number"class="form-control"place holder="Price"formControlName="price">
-                <label class="form-label">description</label>
-                <input type="text"class="form-control"place holder="description"formControlName="description">
-              
+              <label class="form-label">productname</label>
+              <input type="text" class="form-control" place holder="enter item name" formControlName="productname">
+              <label class="form-label">quantity</label>
+              <input type="text" class="form-control" place holder="quantity" formControlName="quantity">
+              <label class="form-label">Price</label>
+              <input type="number" class="form-control" place holder="Price" formControlName="price">
+              <label class="form-label">description</label>
+              <input type="text" class="form-control" place holder="description" formControlName="description">
+      
             </div>
-           <div class=" text-center">
-            <button class="btn btn-success"  type="submit" (click)="Add()">Add</button>
-           </div>
+            <div class=" text-center">
+              <button class="btn btn-success" type="submit" (click)="updateVeg()">Update</button>
+            </div>
+          </div>
+        </form>
+
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">
+            Close
+          </button>
         </div>
-    </form>
-    <table class=" table  table-striped table-bordered ">
-        <thead>
-            <tr>
-                
-                <th>productname</th>
-                <th>quantity</th>
-                <th>price</th>
-                <th>description</th>
-                <th>Action</th>
-               
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let p of veg">
-                <td>{{p.productname}}</td>
-                <td>{{p.quantity}}</td>
-                <td>{{p.price}}</td>
-                <td>{{p.description}}</td>
-                <td><a href=""><i class="bi bi-pencil-square"></i></a>,<a href=""><i class="bi bi-trash"></i></a></td>
-
-               
-            </tr>
-        </tbody>
-    </table>
-
+      </div>
+    </div>
+  </div>
 </div>
