--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -20,7 +20,7 @@
                     <div class="text-center">
                         <button class="btn btn-success" type="submit" (click)="login()">login</button>
                     </div>
-                   
+                   <a routerLink="forgetpassword" class="text-decoration-none text-center">ForgetPassword?</a>
                 </div>
     
             </div>
